css/@media.css
@media (max-width: 499px) {
  body {
    background: url("/image/logom.png") no-repeat !important;
    background-size: cover !important;
    background-position: center !important;
  }
  .navbarulist ul {
    width: 5rem;
    margin-right: 5px;
  }

  .acktabytes {
    font-size: 1.5rem !important;
  }

  .logo {
    width: 55px !important;
    height: 55px !important;
    margin: 2px;
  }

  .logoname {
    font-size: 0.9em;
    flex-basis: 90% !important;
    margin: 0;
  }

  .serbut {
    margin-right: 5px;
  }

  .body1 {
    height: 40vh;
    background-color: #352b20c5 !important;
  }
  .body3 {
    background-color: #352b20c5 !important;
  }

  .services-list li {
    font-size: 20px;
  }

  .services-list li:hover {
    font-size: 22px;
  }

  .foot {
    height: 600px !important;
    margin-top: 8px;
    padding: 35px;
    display: flex;
    flex-direction: column !important;
    justify-content: space-around;
    background-color: #352b20 !important;
  }

  label {
    font-size: 1.7rem;
    margin-bottom: 5px;
    display: block;
  }

  input[type="text"],
  input[type="email"],
  input[type="password"] {
    width: 100%;
    padding: 10px;
    border: 1px solid #ccc;
    border-radius: 5px;
    font-size: 1rem;
    transition: border-color 0.3s;
  }

  .fb {
    background-color: #000000;
    margin-top: 220px;
    height: 100%;
    margin: 0;
  }

  .formbody2 {
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .signinbutton {
    background-color: #ff33004a;
    border: 1px solid #ffffff8f;
    padding: 15px;
    border-radius: 9px;
    width: 110px;
    font-size: 21px;
    color: wheat;
  }

  .housebut {
    display: flex;
    justify-content: center;
  }

  .si,
  .housebut {
    margin-bottom: 20px;
    width: 300px;
  }

  input[type="password"],
  input[type="date"],
  select {
    height: 40px;
    width: 100%;
    border: 1px solid #ffffff;
    border-radius: 5px;
  }

  .wed {
    font-size: 19px;
    width: 200px !important;
  }

  .signbutton {
    background-color: #d72d8222;
    padding: 11px;
    outline: none;
    border: 2px solid #4403483e;
    border-radius: 7px;
    width: 200px;
    font-weight: 900;
    color: #ffffff;
  }

  .signupform {
    width: 93%;
    height: 100%;
    border: 3px solid #0000004e;
    border-radius: 19px;
    padding: 29px;
    margin: 40px;
    background-color: transparent;
  }

  input[placeholder] {
    font-size: 20px;
  }
  .about-container {
    height: 100vh;
  }
}

@media (min-width: 500px) and (max-width: 1000px) {
  .navbarulist ul {
    width: 5rem;
    margin-right: 10px;
  }

  .acktabytes {
    font-size: 1.5rem !important;
  }

  .logo {
    width: 59px !important;
    height: 59px !important;
    margin: 2px;
  }

  .logoname {
    font-size: 1em;
    flex-basis: 90% !important;
    margin: 0;
  }

  .loginbut {
    margin: 8px;
    padding: 8px !important;
    font-size: 19px;
  }

  .serdrop {
    padding: 8px !important;
    font-size: 19px;
  }

  .body1 {
    height: 70px;
  }

  .services-list li {
    font-size: 23px;
  }

  .services-list li:hover {
    font-size: 25px;
  }

  .foot {
    height: 600px !important;
    margin-top: 8px;
    padding: 35px;
    display: flex;
    flex-direction: column !important;
    justify-content: space-around;
  }

  label {
    font-size: 1.7rem;
    margin-bottom: 5px;
    display: block;
  }

  input[type="text"],
  input[type="email"],
  input[type="password"] {
    width: 100%;
    padding: 10px;
    border: 1px solid #ccc;
    border-radius: 5px;
    font-size: 1rem;
    transition: border-color 0.3s;
  }

  .fb {
    background-color: #000000;
    margin-top: 220px;
    height: 100%;
    margin: 0;
  }

  .signinbutton {
    background-color: #ff33004a;
    border: 1px solid #ffffff8f;
    padding: 10px;
    border-radius: 9px;
    width: 110px;
    color: wheat;
  }

  .si,
  .housebut {
    margin-bottom: 20px;
    width: 400px;
  }

  input[type="password"],
  input[type="date"],
  select {
    height: 40px;
    width: 100%;
    border: 1px solid #ffffff;
    border-radius: 5px;
  }

  .wed {
    font-size: 19px;
    width: 200px !important;
  }

  .signbutton {
    background-color: #d72d8222;
    padding: 11px;
    outline: none;
    border: 2px solid #4403483e;
    border-radius: 7px;
    width: 200px;
    font-weight: 900;
    color: #ffffff;
  }

  .signupform {
    width: 93%;
    height: 100%;
    border: 3px solid #0000004e;
    border-radius: 19px;
    padding: 29px;
    margin: 40px;
    background-color: transparent;
  }

  input[placeholder] {
    font-size: 25px;
  }
}

/* .logosection img {
  position: absolute;
  left: 11rem;
  top: 5px;
  ;
} */

@media (max-width: 1000px) {
  .logosection img {
    position: absolute;
    left: 8.8rem !important;
  }
}

